--- a/Monitor-Filter.html
+++ b/Monitor-Filter.html
@@ -43,8 +43,8 @@
 						<div id="new" class ="new"><h1>Get A Sample</h1></div>
 						<div id="demo" class="demo">
 							<video width="100%" height="65%" controls>
-								<source src="video/brand.mp4" type="video/mp4">
-								<source src="video/brand.ogg" type="video/ogg">
+								<source src="video/branding.mp4" type="video/mp4">
+								<source src="video/branding.ogg" type="video/ogg">
 								Your browser does not support the video tag.
 							</video>
 						</div>
